feature: add the original footer

--- a/frontend/modules/main/web/css/main.css
+++ b/frontend/modules/main/web/css/main.css
@@ -90,6 +90,14 @@ a.desc:after {
     outline: none;
 }
 
+.navbar-light .navbar-nav .nav-link.active{
+    border-bottom: solid 3px #fff;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    border-bottom: solid 3px #fff;
+}
+
 /* style breadcrumb widget as in previous bootstrap versions */
 .breadcrumb {
     background-color: var(--bs-gray-200);
@@ -100,4 +108,23 @@ a.desc:after {
 .breadcrumb-item > a
 {
     text-decoration: none;
+}
+
+.lev-bg{
+    background-color: #42826C;
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color: #fff;
+    margin-right: 25px;
+    transition: .8s ease;
+    border-bottom: solid 3px transparent;
+}
+
+.ml-auto{
+    margin-left: auto !important;
+}
+
+.site-error.md-top-20 {
+    margin-top: 100px;
 }
